pkg/story/testdata/negative/missing_stations.story
Meta
    Name:  Missing Stations Fixture
    Id:    missing_stations_fixture
    Tags:  helper

Scenario: Dummy scenario
    When  something happens
    Then  something is verified
